# teaclave-sgx-sdk

./: .asf.yaml  CMakeLists.txt  SECURITY.md  buildenv.mk  teaclave-patches.bundle
docs/: security-model.md
rustlib/: x86_64-unknown-linux-sgx.json
rustlib/panic_abort/src/: lib.rs
rustlib/panic_unwind/src/: lib.rs
sgx_alloc/src/: lib.rs  system.rs
sgx_oc/src/: lib.rs  macros.rs
sgx_oc/src/linux/: mod.rs
sgx_oc/src/linux/x86_64/: mod.rs
sgx_rsrvmm/: build.rs
sgx_rsrvmm/src/: lib.rs
sgx_rsrvmm/src/rsrvmm/: mod.rs
sgx_serialize/src/: types.rs
sgx_sync/src/: lib.rs  once_lock.rs
sgx_sync/src/sys/: futex.rs
sgx_trts/: build.rs
sgx_trts/src/: arch.rs  capi.rs  capi_sgx_sdk.rs  error.rs  lib.rs  rand.rs  version.rs  xsave.rs
sgx_trts/src/asm/: macro.S  metadata.S  mod.rs  pic.S
sgx_trts/src/call/: ecall.rs  mod.rs  ocall.rs  ocalloc.rs
sgx_trts/src/edmm/: layout.rs
sgx_trts/src/elf/: header.rs  program.rs  slice.rs  zero.rs
sgx_trts/src/enclave/: entry.rs  init.rs  mem.rs  mod.rs  parse.rs  state.rs
sgx_trts/src/feature/: mod.rs  sys.rs
sgx_trts/src/inst/hw/: inst.rs
sgx_trts/src/inst/hyper/: inst.rs
sgx_trts/src/inst/sim/: derive.rs  inst.rs  mod.rs
sgx_trts/src/se/: report.rs
sgx_trts/src/sync/: lazy.rs  mutex.rs  once.rs  rwlock.rs
sgx_trts/src/tcs/: tc.rs  tls.rs
sgx_trts/src/veh/: exception.rs  mod.rs  register.rs
sgx_tstd/hashbrown/src/: lib.rs  macros.rs
sgx_tstd/hashbrown/src/raw/: mod.rs
sgx_tstd/src/: alloc.rs  f32.rs  f64.rs  fs.rs  lib.rs  num.rs  panic.rs  panicking.rs  process.rs
sgx_tstd/src/ffi/: mod.rs
sgx_tstd/src/fs/: tests.rs
sgx_tstd/src/hash/: random.rs
sgx_tstd/src/io/: copy.rs  cursor.rs  impls.rs  mod.rs  stdio.rs  tests.rs  util.rs
sgx_tstd/src/io/buffered/: bufreader.rs  tests.rs
sgx_tstd/src/io/buffered/bufreader/: buffer.rs
sgx_tstd/src/io/util/: tests.rs
sgx_tstd/src/net/: tcp.rs
sgx_tstd/src/net/tcp/: tests.rs
sgx_tstd/src/os/fd/: owned.rs
sgx_tstd/src/prelude/: v1.rs
sgx_tstd/src/sync/: mod.rs
sgx_tstd/src/sys/: fd.rs  fs.rs  net.rs  os_str.rs  pipe.rs  stdio.rs  time.rs
sgx_tstd/src/sys/common/thread_local/: fast_local.rs  os_local.rs
sgx_tstd/src/sys/personality/dwarf/: eh.rs
sgx_tstd/src/sys/unsupported/: pipe.rs  process.rs
sgx_tstd/src/sys_common/: net.rs
sgx_tstd/src/sys_common/once/: futex.rs
sgx_tstd/src/thread/: mod.rs
sgx_tstd/src/untrusted/: path.rs  time.rs
sgx_types/src/: function.rs  lib.rs  metadata.rs
sgx_types/src/error/: mod.rs
sgx_types/src/types/: dcap.rs  mod.rs  report2.rs  switchless.rs  tdx.rs
sgx_unwind/src/: lib.rs
sgx_urts/src/enclave/: mod.rs
